--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -48,8 +48,11 @@ jobs:
           ./scripts/feeds update -a
           ./scripts/feeds install -a
 
-      - name: 生成配置文件
+      - name: 生成固件配置文件
         run: |
+          rm -f ./.config*
+          touch ./.config
+          
           # 编译64位固件
           cat >> .config <<EOF
           CONFIG_TARGET_x86=y
@@ -122,7 +125,7 @@ jobs:
           sed -i 's/^[ \t]*//g' ./.config
           make defconfig
           
-      - name: 处理配置文件
+      - name: 处理固件配置文件
         run: |
           make download -j8
           find dl -size -1024c -exec rm -f {} \;
